--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Hello World!</title>
+<title>Page Title</title>
 </head>
 <body>
 
-<h1>Hello World!</h1>
-<p>Hello World!</p>
+<h1>This is a Heading</h1>
+<p>This is a paragraph.</p>
+
+<p title="About W3Schools">W3Schools is a web developer's site.</p>
 
 </body>
 </html>
