--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
 
 <p title="About W3Schools">W3Schools is a web developer's site.</p>
 
+<img src="w3schools.jpg" width="250" height="400">
+
 </body>
 </html>
