--- a/index.html
+++ b/index.html
@@ -12,5 +12,7 @@
 
 <img src="w3schools.jpg" width="250" height="400">
 
+<a href="https://www.w3schools.com">This is a link</a>
+
 </body>
 </html>
