--- a/index.html
+++ b/index.html
@@ -8,13 +8,27 @@
 <h1>This is a Heading</h1>
 <p>This is a paragraph.</p>
 
+<!-- HTML Exercise 1 -->
 <p title="About W3Schools">W3Schools is a web developer's site.</p>
 
+<!-- HTML Exercise 3 -->
 <a href="https://www.w3schools.com">This is a link</a>
 
+<!-- HTML Exercise 5 -->
 <h1>London</h1>
+<!-- HTML Exercise 6 -->
 <hr>
 <p>London is the capital city of England. It is the most populous city in the United Kingdom, with a metropolitan area of over 13 million inhabitants.</p>
+
+<!-- HTML Exercise 8 -->
+<h1>Universal Studios Presents</h1>
+
+<h2>Jurassic Park</h2>
+
+<h3>About</h3>
+
+<p>On the Island of Isla Nublar, a new park has been built: Jurassic Park is a theme park of cloned dinosaurs!!</p>
+
 
 </body>
 </html>
