--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+<title>HTML Tutorial Exercises</title>
 </head>
 <body>
 
-<h1>This is a Heading</h1>
+<h1>This is what I am learning about HTML</h1>
 <p>This is a paragraph.</p>
 
 <!-- HTML Exercise 1 -->
@@ -22,11 +22,8 @@
 
 <!-- HTML Exercise 8 -->
 <h1>Universal Studios Presents</h1>
-
 <h2>Jurassic Park</h2>
-
 <h3>About</h3>
-
 <p>On the Island of Isla Nublar, a new park has been built: Jurassic Park is a theme park of cloned dinosaurs!!</p>
 
 
