--- a/index.html
+++ b/index.html
@@ -27,5 +27,10 @@
 <p>On the Island of Isla Nublar, a new park has been built: Jurassic Park is a theme park of cloned dinosaurs!!</p>
 
 
+<!-- HTML Exercise 9 -->
+<p>Hello World!</p>
+
+
+
 </body>
 </html>
