--- a/index.html
+++ b/index.html
@@ -26,12 +26,24 @@
 <h3>About</h3>
 <p>On the Island of Isla Nublar, a new park has been built: Jurassic Park is a theme park of cloned dinosaurs!!</p>
 
-
 <!-- HTML Exercise 9 -->
 <p>Hello World!</p>
 
 <!-- HTML Exercise 11 -->
 <p>My Bonnie lies<br>over the ocean.</p>
+
+<!-- HTML Exercise 12 -->
+<pre>
+  My Bonnie lies over the ocean.
+
+  My Bonnie lies over the sea.
+
+  My Bonnie lies over the ocean.
+
+  Oh, bring back my Bonnie to me.
+</pre>
+
+
 
 </body>
 </html>
