--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
   Oh, bring back my Bonnie to me.
 </pre>
 
+<!-- HTML Exercise 13 -->
+<p style="color:blue;">This is a blue paragraph.</p>
+
 
 
 </body>
