--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
 <!-- HTML Exercise 13 -->
 <p style="color:blue;">This is a blue paragraph.</p>
 
-
+<!-- HTML Exercise 14 -->
+<p style="font-family:courier;">This is a paragraph in Courier.</p>
 
 </body>
 </html>
