--- a/index.html
+++ b/index.html
@@ -49,5 +49,8 @@
 <!-- HTML Exercise 14 -->
 <p style="font-family:courier;">This is a paragraph in Courier.</p>
 
+<!-- HTML Exercise 15 -->
+<p style="text-align:center;">This is a paragraph.</p>
+
 </body>
 </html>
