--- a/index.html
+++ b/index.html
@@ -52,5 +52,8 @@
 <!-- HTML Exercise 15 -->
 <p style="text-align:center;">This is a paragraph.</p>
 
+<!-- HTML Exercise 16 -->
+<p style="font-size:50px;">This is a paragraph with half-sized font.</p>
+
 </body>
 </html>
