--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <p style="text-align:center;">This is a paragraph.</p>
 
 <!-- HTML Exercise 16 -->
-<p style="font-size:50px;">This is a paragraph with half-sized font.</p>
+<p style="font-size:50px;">This is a paragraph with 50 point font.</p>
 
 </body>
 </html>
