--- a/index.html
+++ b/index.html
@@ -55,5 +55,8 @@
 <!-- HTML Exercise 16 -->
 <p style="font-size:50px;">This is a paragraph with 50 point font.</p>
 
+<!-- HTML Exercise 19 -->
+<p>WWF's mission is to stop the <strong>degradation</strong> of our planet's natural environment.</p>
+
 </body>
 </html>
