--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <a href="https://www.w3schools.com">This is a link</a>
 
 <!-- HTML Exercise 5 -->
-<h1>London</h1>
+<h1 title="HTML Exercise 5">London</h1>
 <!-- HTML Exercise 6 -->
 <hr>
 <p>London is the capital city of England. It is the most populous city in the United Kingdom, with a metropolitan area of over 13 million inhabitants.</p>
@@ -57,6 +57,11 @@
 
 <!-- HTML Exercise 19 -->
 <p>WWF's mission is to stop the <strong>degradation</strong> of our planet's natural environment.</p>
+
+<!-- HTML Exercise 20 -->
+<h1>Tokyo</h1>
+
+<p>Tokyo is the capital of Japan, the most populous <em>metropolitan</em> area in the world.</p>
 
 </body>
 </html>
