--- a/index.html
+++ b/index.html
@@ -63,5 +63,8 @@
 
 <p>Tokyo is the capital of Japan, the most populous <em>metropolitan</em> area in the world.</p>
 
+<!-- HTML Exercise 21 -->
+<p title="HTML Exercise 21">HTML is <mark>FUN</mark> to learn!</p>
+
 </body>
 </html>
