--- a/index.html
+++ b/index.html
@@ -66,5 +66,8 @@
 <!-- HTML Exercise 21 -->
 <p title="HTML Exercise 21">HTML is <mark>FUN</mark> to learn!</p>
 
+<!-- HTML Exercise 22 -->
+<p title="HTML Exercise 22">H<sub>2</sub>O is the scientific term for water.</p>
+
 </body>
 </html>
