--- a/index.html
+++ b/index.html
@@ -69,5 +69,8 @@
 <!-- HTML Exercise 22 -->
 <p title="HTML Exercise 22">H<sub>2</sub>O is the scientific term for water.</p>
 
+<!-- HTML Exercise 23 -->
+<p title="HTML Exercise 23">My favorite color is <del><p style="color:red;">red</p></del> <p style="color:blue;">blue</p>.</p>
+
 </body>
 </html>
