Fix HTML Exercise 23

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 <p title="HTML Exercise 22">H<sub>2</sub>O is the scientific term for water.</p>
 
 <!-- HTML Exercise 23 -->
-<p title="HTML Exercise 23">My favorite color is <del><p style="color:red;">red</p></del> <p style="color:blue;">blue</p>.</p>
+<p title="HTML Exercise 23">My favorite color is <del style="color:red;">red</del> <b style="color:blue;">blue</b>.</p>
 
 </body>
 </html>
