--- a/index.html
+++ b/index.html
@@ -72,5 +72,8 @@
 <!-- HTML Exercise 23 -->
 <p title="HTML Exercise 23">My favorite color is <del style="color:red;">red</del> <b style="color:blue;">blue</b>.</p>
 
+<!-- HTML Exercise 24 -->
+<p title="HTML Exercise 24">Learning HTML is so <q>cool</q>!</p>
+
 </body>
 </html>
