--- a/index.html
+++ b/index.html
@@ -72,8 +72,11 @@
 <!-- HTML Exercise 23 -->
 <p title="HTML Exercise 23">My favorite color is <del style="color:red;">red</del> <b style="color:blue;">blue</b>.</p>
 
-<!-- HTML Exercise 24 -->
-<p title="HTML Exercise 24">Learning HTML is so <q>cool</q>!</p>
+<!-- HTML Exercise 25 -->
+<blockquote cite="http://www.worldwildlife.org/who/index.html">
+For 50 years, WWF has been protecting the future of nature. The world's leading conservation organization, WWF works in 100 countries and is supported by 1.2 million members in the United States and close to 5 million globally.
+</blockquote>
+
 
 </body>
 </html>
