--- a/index.html
+++ b/index.html
@@ -77,6 +77,9 @@
 For 50 years, WWF has been protecting the future of nature. The world's leading conservation organization, WWF works in 100 countries and is supported by 1.2 million members in the United States and close to 5 million globally.
 </blockquote>
 
+<!-- HTML Exercise 26 -->
+<bdo dir="rtl" title="HTML Exercise 26">What a beautiful day!</bdo>
+
 
 </body>
 </html>
