--- a/index.html
+++ b/index.html
@@ -80,6 +80,8 @@ For 50 years, WWF has been protecting the future of nature. The world's leading 
 <!-- HTML Exercise 26 -->
 <bdo dir="rtl" title="HTML Exercise 26">What a beautiful day!</bdo>
 
+<!-- HTML Exercise 27 -->
+<p title="HTML Exercise 27">The <abbr title="World Health Organization"> WHO</abbr> was founded in 1948.</p>
 
 </body>
 </html>
