--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 <title>HTML Tutorial Exercises</title>
 <style>
 	p {border: 1px solid blue;}
+	#special {
+		color:gray;
+		background-color:lightblue;
+	}
 </style>
 </head>
 <body>
@@ -85,6 +89,9 @@ For 50 years, WWF has been protecting the future of nature. The world's leading 
 
 <!-- HTML Exercise 27 -->
 <p title="HTML Exercise 27">The <abbr title="World Health Organization"> WHO</abbr> was founded in 1948.</p>
+
+<!-- HTML Exercise 34 -->
+<p id="special">This is a paragraph.</p>
 
 </body>
 </html>
