--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 		color:gray;
 		background-color:lightblue;
 	}
+	p.intro {
+		font-size:20px;
+		color:gray;
+		background-color:lightblue;
+	}
 </style>
 </head>
 <body>
@@ -92,6 +97,9 @@ For 50 years, WWF has been protecting the future of nature. The world's leading 
 
 <!-- HTML Exercise 34 -->
 <p id="special">This is a paragraph.</p>
+
+<!-- HTML Exercise 35 -->
+<p class="intro">This is a paragraph.</p>
 
 </body>
 </html>
