--- a/index.html
+++ b/index.html
@@ -101,5 +101,9 @@ For 50 years, WWF has been protecting the future of nature. The world's leading 
 <!-- HTML Exercise 35 -->
 <p class="intro">This is a paragraph.</p>
 
+<!-- HTML Exercise 36 -->
+<a href="default.html">Visit our HTML tutorial.</a>
+
+
 </body>
 </html>
