--- a/index.html
+++ b/index.html
@@ -104,6 +104,8 @@ For 50 years, WWF has been protecting the future of nature. The world's leading 
 <!-- HTML Exercise 36 -->
 <a href="default.html">Visit our HTML tutorial.</a>
 
+<!-- HTML Exercise 37 -->
+<a href="html_images.asp" style="text-decoration:none">HTML Images</a>
 
 </body>
 </html>
