--- a/index.html
+++ b/index.html
@@ -107,5 +107,8 @@ For 50 years, WWF has been protecting the future of nature. The world's leading 
 <!-- HTML Exercise 37 -->
 <a href="html_images.asp" style="text-decoration:none">HTML Images</a>
 
+<!-- HTML Exercise 38 -->
+<a href="html_images.asp" target="_blank">HTML Images</a>
+
 </body>
 </html>
