--- a/index.html
+++ b/index.html
@@ -110,5 +110,9 @@ For 50 years, WWF has been protecting the future of nature. The world's leading 
 <!-- HTML Exercise 38 -->
 <a href="html_images.asp" target="_blank">HTML Images</a>
 
+<!-- HTML Exercise 39 -->
+<a href="default.html"><img src="smiley.gif"></a>
+
+
 </body>
 </html>
