--- a/index.html
+++ b/index.html
@@ -113,6 +113,9 @@ For 50 years, WWF has been protecting the future of nature. The world's leading 
 <!-- HTML Exercise 39 -->
 <a href="default.html"><img src="smiley.gif"></a>
 
+<!-- HTML Exercise 40 -->
+<a href="default.html" title="Home">Back to Home</a>
+
 
 </body>
 </html>
