--- a/index.html
+++ b/index.html
@@ -68,12 +68,12 @@
 <p style="font-size:50px;">This is a paragraph with 50 point font.</p>
 
 <!-- HTML Exercise 19 -->
-<p>WWF's mission is to stop the <strong>degradation</strong> of our planet's natural environment.</p>
+<p>Strong allows for an <strong>equal experience for all users</strong> over bold.</p>
 
 <!-- HTML Exercise 20 -->
-<h1>Tokyo</h1>
+<h1>Emphasis vs Italics</h1>
 
-<p>Tokyo is the capital of Japan, the most populous <em>metropolitan</em> area in the world.</p>
+<p>Same as strong vs bold, emphasis allows for an <em>equal experience for all users</em> over italics.</p>
 
 <!-- HTML Exercise 21 -->
 <p title="HTML Exercise 21">HTML is <mark>FUN</mark> to learn!</p>
@@ -82,7 +82,7 @@
 <p title="HTML Exercise 22">H<sub>2</sub>O is the scientific term for water.</p>
 
 <!-- HTML Exercise 23 -->
-<p title="HTML Exercise 23">My favorite color is <del style="color:red;">red</del> <b style="color:blue;">blue</b>.</p>
+<p title="HTML Exercise 23">My favorite color is <del style="color:red;">red</del> <div style="color:blue;">blue</div>.</p>
 
 <!-- HTML Exercise 25 -->
 <blockquote cite="http://www.worldwildlife.org/who/index.html">
@@ -96,13 +96,13 @@ For 50 years, WWF has been protecting the future of nature. The world's leading 
 <p title="HTML Exercise 27">The <abbr title="World Health Organization"> WHO</abbr> was founded in 1948.</p>
 
 <!-- HTML Exercise 34 -->
-<p id="special">This is a paragraph.</p>
+<p id="special">This is a paragraph using a "special" ID.</p>
 
 <!-- HTML Exercise 35 -->
-<p class="intro">This is a paragraph.</p>
+<p class="intro">This is a paragraph for an "intro" class.</p>
 
 <!-- HTML Exercise 36 -->
-<a href="default.html">Visit our HTML tutorial.</a>
+<a href="default.html">Visit the HTML tutorial.</a>
 
 <!-- HTML Exercise 37 -->
 <a href="html_images.asp" style="text-decoration:none">HTML Images</a>
@@ -114,7 +114,7 @@ For 50 years, WWF has been protecting the future of nature. The world's leading 
 <a href="default.html"><img src="smiley.gif"></a>
 
 <!-- HTML Exercise 40 -->
-<a href="default.html" title="Home">Back to Home</a>
+<a href="index.html" title="Home">Back to Home</a>
 
 
 </body>
