--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 <p title="HTML Exercise 22">H<sub>2</sub>O is the scientific term for water.</p>
 
 <!-- HTML Exercise 23 -->
-<p title="HTML Exercise 23">My favorite color is <del style="color:red;">red</del> <div style="color:blue;">blue</div>.</p>
+<p title="HTML Exercise 23">My favorite color is <del style="color:red;">red</del> <b>blue</b>.</p>
 
 <!-- HTML Exercise 25 -->
 <blockquote cite="http://www.worldwildlife.org/who/index.html">
