--- a/index.html
+++ b/index.html
@@ -45,14 +45,15 @@
 <p>My Bonnie lies<br>over the ocean.</p>
 
 <!-- HTML Exercise 12 -->
+<!-- Had to pay homage to Red vs Blue by Rooster Teeth -->
 <pre>
-  My Bonnie lies over the ocean.
+  Roses are red
 
-  My Bonnie lies over the sea.
+  And violets are blue.
 
-  My Bonnie lies over the ocean.
+  One day we'll cruise down
 
-  Oh, bring back my Bonnie to me.
+  Blood Gulch Avenue.
 </pre>
 
 <!-- HTML Exercise 13 -->
@@ -82,7 +83,7 @@
 <p title="HTML Exercise 22">H<sub>2</sub>O is the scientific term for water.</p>
 
 <!-- HTML Exercise 23 -->
-<p title="HTML Exercise 23">My favorite color is <del style="color:red;">red</del> <b>blue</b>.</p>
+<p title="HTML Exercise 23">Roses are <del style="color:red;">red</del>, and violets are <b style="color:blue">blue</b>.</p>
 
 <!-- HTML Exercise 25 -->
 <blockquote cite="http://www.worldwildlife.org/who/index.html">
