--- a/index.html
+++ b/index.html
@@ -69,18 +69,18 @@
 <p style="font-size:50px;">This is a paragraph with 50 point font.</p>
 
 <!-- HTML Exercise 19 -->
-<p>Strong allows for an <strong>equal experience for all users</strong> over bold.</p>
+<p>Strong allows for an <strong>equal experience for all users</strong> over <b>bold</b>.</p>
 
 <!-- HTML Exercise 20 -->
 <h1>Emphasis vs Italics</h1>
 
-<p>Same as strong vs bold, emphasis allows for an <em>equal experience for all users</em> over italics.</p>
+<p>Same as strong vs bold, emphasis allows for an <em>equal experience for all users</em> over <i>italics</i>.</p>
 
 <!-- HTML Exercise 21 -->
-<p title="HTML Exercise 21">HTML is <mark>FUN</mark> to learn!</p>
+<p title="HTML Exercise 21">HTML is <mark>markedly FUN</mark> to learn!</p>
 
 <!-- HTML Exercise 22 -->
-<p title="HTML Exercise 22">H<sub>2</sub>O is the scientific term for water.</p>
+<p title="HTML Exercise 22"><sub>Sub</sub>scripting allows us to write the scientific names of compounds.</p>
 
 <!-- HTML Exercise 23 -->
 <p title="HTML Exercise 23">Roses are <del style="color:red;">red</del>, and violets are <b style="color:blue">blue</b>.</p>
