--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 <p title="HTML Exercise 22"><sub>Sub</sub>scripting allows us to write the scientific names of compounds.</p>
 
 <!-- HTML Exercise 23 -->
-<p title="HTML Exercise 23">Roses are <del style="color:red;">red</del>, and violets are <b style="color:blue">blue</b>.</p>
+<p title="HTML Exercise 23">Roses are <del style="color:red;">red</del>, and violets are <span style="color:blue">blue</span>.</p>
 
 <!-- HTML Exercise 25 -->
 <blockquote cite="http://www.worldwildlife.org/who/index.html">
