--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <!-- HTML Exercise 12 -->
 <!-- Had to pay homage to Red vs Blue by Rooster Teeth -->
 <pre>
-  Roses are red
+  <span style="color:#FF007F">Roses</span> are <span style="color:red">red</span>
 
   And violets are blue.
 
