--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 <pre>
   <span style="color:#FF007F">Roses</span> are <span style="color:red">red</span>
 
-  And violets are blue.
+  And <span style="color:#7F00FF">violets</span> are <span style="color:blue">blue</span>.
 
   One day we'll cruise down
 
