--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 		background-color:lightblue;
 	}
 	@keyframes roses {
-		0% {color: #FF007F;}
-		100% {color: red;}
+		from {color: #FF007F;}
+		to {color: red;}
 	}
 </style>
 </head>
