--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
 <title>HTML Tutorial Exercises</title>
 <style>
-	.rosered {
-		position: relative;
+	span.rosered {
+		animation: roses 4s linear infinite;
+		/*position: relative;
 		animation-name: roses;
 		animation-duration: 4s;
-		animation-iteration-count: infinite;
+		animation-iteration-count: infinite;*/
 	}
 	.violetblue {
 		position: relative;
