--- a/index.html
+++ b/index.html
@@ -3,19 +3,13 @@
 <head>
 <title>HTML Tutorial Exercises</title>
 <style>
-	span.rosered {
+	span {
 		animation: roses 4s linear infinite;
 		display: block;
 		/*position: relative;
 		animation-name: roses;
 		animation-duration: 4s;
 		animation-iteration-count: infinite;*/
-	}
-	.violetblue {
-		position: relative;
-		animation-name: violets;
-		animation-duration: 4s;
-		animation-iteration-count: infinite;
 	}
 	p {border: 1px solid blue;}
 	#special {
