--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <style>
 	span {
 		animation: roses 4s linear infinite;
-		display: block;
+		display: inline;
 		/*position: relative;
 		animation-name: roses;
 		animation-duration: 4s;
