--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <title>HTML Tutorial Exercises</title>
 <style>
-	span {
+	.rosesred {
 		animation: roses 4s linear infinite;
 		display: inline;
 		/*position: relative;
@@ -59,7 +59,7 @@
 <!-- HTML Exercise 12 -->
 <!-- Had to pay homage to Red vs Blue by Rooster Teeth -->
 <pre>
-  <span id="rosered">Roses are red</span>
+  <span id="rosesred">Roses are red</span>
 
   And <span style="color:#7F00FF">violets</span> are <span style="color:blue">blue</span>.
 
