--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 		background-color:lightblue;
 	}
 	@keyframes roses {
-		from {color: #FF007F;}
-		to {color: red;}
+		from {background-color: #FF007F;}
+		to {background-color: red;}
 	}
 </style>
 </head>
