--- a/index.html
+++ b/index.html
@@ -3,23 +3,9 @@
 <head>
 <title>HTML Tutorial Exercises</title>
 <style>
-	.rosesred {
+	span {
 		animation: roses 4s linear infinite;
 		display: inline;
-		/*position: relative;
-		animation-name: roses;
-		animation-duration: 4s;
-		animation-iteration-count: infinite;*/
-	}
-	p {border: 1px solid blue;}
-	#special {
-		color:gray;
-		background-color:lightblue;
-	}
-	p.intro {
-		font-size:20px;
-		color:gray;
-		background-color:lightblue;
 	}
 	@keyframes roses {
 		from {background-color: #FF007F;}
@@ -59,9 +45,9 @@
 <!-- HTML Exercise 12 -->
 <!-- Had to pay homage to Red vs Blue by Rooster Teeth -->
 <pre>
-  <span id="rosesred">Roses are red</span>
+  <span>Roses are red</span>
 
-  And <span style="color:#7F00FF">violets</span> are <span style="color:blue">blue</span>.
+  And violets are blue.
 
   One day we'll cruise down
 
