--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 <!-- HTML Exercise 12 -->
 <!-- Had to pay homage to Red vs Blue by Rooster Teeth -->
-<pre>
+<blockquote>
   <span>Roses are red</span>
 
   And violets are blue.
@@ -52,7 +52,7 @@
   One day we'll cruise down
 
   Blood Gulch Avenue.
-</pre>
+</blockquote>
 
 <!-- HTML Exercise 13 -->
 <p style="color:blue;">This is a blue paragraph.</p>
