--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <title>HTML Tutorial Exercises</title>
 <style>
-	span {
+	div {
 		animation: roses 4s linear infinite;
 		display: inline;
 	}
@@ -45,13 +45,13 @@
 <!-- HTML Exercise 12 -->
 <!-- Had to pay homage to Red vs Blue by Rooster Teeth -->
 <blockquote>
-  <span>Roses are red</span>
+  <div>Roses are red</div>
 
-  And violets are blue.
+  And violets are blue.<br>
 
-  One day we'll cruise down
+  One day we'll cruise down<br>
 
-  Blood Gulch Avenue.
+  Blood Gulch Avenue.<br>
 </blockquote>
 
 <!-- HTML Exercise 13 -->
