--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 <!-- HTML Exercise 12 -->
 <!-- Had to pay homage to Red vs Blue by Rooster Teeth -->
 <blockquote>
-  <div>Roses are red</div>
+  <div>Roses are red</div><br>
 
   And violets are blue.<br>
 
