--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 <title>HTML Tutorial Exercises</title>
 <style>
 	div {
-		animation: roses 4s linear infinite;
-		display: inline;
+		animation: roses 4s linear infinite reverse;
 	}
 	@keyframes roses {
 		from {background-color: #FF007F;}
