--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <style>
 	div {
 		animation: roses 4s linear infinite reverse;
+		display: inline;
 	}
 	@keyframes roses {
 		from {background-color: #FF007F;}
