--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 		display: inline;
 	}
 	@keyframes roses {
-		from {background-color: #FF007F;}
-		to {background-color: red;}
+		from {background-color: red;}
+		to {background-color: blue;}
 	}
 </style>
 </head>
@@ -45,13 +45,13 @@
 <!-- HTML Exercise 12 -->
 <!-- Had to pay homage to Red vs Blue by Rooster Teeth -->
 <blockquote>
-  <div>Roses are red</div><br>
+  <div>Roses are red<br>
 
   And violets are blue.<br>
 
   One day we'll cruise down<br>
 
-  Blood Gulch Avenue.<br>
+  Blood Gulch Avenue.<br></div>
 </blockquote>
 
 <!-- HTML Exercise 13 -->
