--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>HTML Tutorial Exercises</title>
 <style>
 	div {
-		animation: roses 4s linear infinite reverse;
+		animation: roses 4s linear infinite alternate;
 		display: inline;
 	}
 	@keyframes roses {
