--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <title>HTML Tutorial Exercises</title>
 <style>
-	div {
+	#rosesred {
 		animation: roses 4s linear infinite alternate;
 		display: inline;
 	}
@@ -44,15 +44,15 @@
 
 <!-- HTML Exercise 12 -->
 <!-- Had to pay homage to Red vs Blue by Rooster Teeth -->
-<blockquote>
-  <div>Roses are red<br>
+<pre>
+  <span id="rosesred">Roses are red</span>
 
-  And violets are blue.<br>
+  And violets are blue.
 
-  One day we'll cruise down<br>
+  One day we'll cruise down
 
-  Blood Gulch Avenue.<br></div>
-</blockquote>
+  Blood Gulch Avenue.
+</pre>
 
 <!-- HTML Exercise 13 -->
 <p style="color:blue;">This is a blue paragraph.</p>
