--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 <!-- HTML Exercise 12 -->
 <!-- Had to pay homage to Red vs Blue by Rooster Teeth -->
-<pre style="text-align:center">
+<pre>
   <span id="rosesred">Roses are red</span>
 
   <span id="violetsblue">And violets are blue.</span>
