--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
 		to {background-color: blue;}
 	}
 	#strolling {
-		animation: stroll 4s ease-in-out 4s;
+		animation: stroll 4s ease-in-out 4s infinite;
 		display: block;
 	}
 	@keyframes stroll {
-		from {left: 0px;}
-		to {left: 30px;}
+		from {left: 1em;}
+		to {left: 5em;}
 	}
 </style>
 </head>
