--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>HTML Tutorial Exercises</title>
+<title>INST377 Learning Assignment</title>
 <style>
 	#rosesred {
 		animation: roses 4s linear infinite alternate;
@@ -20,7 +20,7 @@
 		to {background-color: blue;}
 	}
 	#strolling {
-		animation: stroll 4s ease-in-out 4s infinite;
+		animation: stroll 4s ease-in-out infinite;
 		display: block;
 	}
 	@keyframes stroll {
