--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 		display: block;
 	}
 	@keyframes stroll {
-		from {left: 1em;}
-		to {left: 5em;}
+		from {left: 0px}
+		to {left: 300px;}
 	}
 </style>
 </head>
@@ -65,68 +65,10 @@
 
   <span id="violetsblue">And violets are blue.</span>
 
-  <div id="strolling">One day we'll cruise down
+  <span id="strolling">One day we'll cruise down
 
-  Blood Gulch Avenue.</div>
+  Blood Gulch Avenue.</span>
 </pre>
-
-<!-- HTML Exercise 13 -->
-<p style="color:blue;">This is a blue paragraph.</p>
-
-<!-- HTML Exercise 14 -->
-<p style="font-family:courier;">This is a paragraph in Courier.</p>
-
-<!-- HTML Exercise 15 -->
-<p style="text-align:center;">This is a paragraph.</p>
-
-<!-- HTML Exercise 16 -->
-<p style="font-size:50px;">This is a paragraph with 50 point font.</p>
-
-<!-- HTML Exercise 19 -->
-<p>Strong allows for an <strong>equal experience for all users</strong> over <b>bold</b>.</p>
-
-<!-- HTML Exercise 20 -->
-<h1>Emphasis vs Italics</h1>
-
-<p>Same as strong vs bold, emphasis allows for an <em>equal experience for all users</em> over <i>italics</i>.</p>
-
-<!-- HTML Exercise 21 -->
-<p title="HTML Exercise 21">HTML is <mark>markedly FUN</mark> to learn!</p>
-
-<!-- HTML Exercise 22 -->
-<p title="HTML Exercise 22"><sub>Sub</sub>scripting allows us to write the scientific names of compounds.</p>
-
-<!-- HTML Exercise 23 -->
-<p title="HTML Exercise 23">Roses are <del style="color:red;">red</del>, and violets are <span style="color:blue">blue</span>.</p>
-
-<!-- HTML Exercise 25 -->
-<blockquote cite="http://www.worldwildlife.org/who/index.html">
-For 50 years, WWF has been protecting the future of nature. The world's leading conservation organization, WWF works in 100 countries and is supported by 1.2 million members in the United States and close to 5 million globally.
-</blockquote>
-
-<!-- HTML Exercise 26 -->
-<bdo dir="rtl" title="HTML Exercise 26">What a beautiful day!</bdo>
-
-<!-- HTML Exercise 27 -->
-<p title="HTML Exercise 27">The <abbr title="World Health Organization"> WHO</abbr> was founded in 1948.</p>
-
-<!-- HTML Exercise 34 -->
-<p id="special">This is a paragraph using a "special" ID.</p>
-
-<!-- HTML Exercise 35 -->
-<p class="intro">This is a paragraph for an "intro" class.</p>
-
-<!-- HTML Exercise 36 -->
-<a href="default.html">Visit the HTML tutorial.</a>
-
-<!-- HTML Exercise 37 -->
-<a href="html_images.asp" style="text-decoration:none">HTML Images</a>
-
-<!-- HTML Exercise 38 -->
-<a href="html_images.asp" target="_blank">HTML Images</a>
-
-<!-- HTML Exercise 39 -->
-<a href="default.html"><img src="smiley.gif"></a>
 
 <!-- HTML Exercise 40 -->
 <a href="index.html" title="Home">Back to Home</a>
