--- a/index.html
+++ b/index.html
@@ -31,43 +31,18 @@
 </head>
 <body>
 
-<h1>This is what I am learning about HTML</h1>
-<p>This is a paragraph.</p>
+<h1>This is what I am learning about HTML, CSS, and other languages</h1>
 
-<!-- HTML Exercise 1 -->
-<p title="About W3Schools">W3Schools is a web developer's site.</p>
-
-<!-- HTML Exercise 3 -->
-<a href="https://www.w3schools.com">This is a link</a>
-
-<!-- HTML Exercise 5 -->
-<h1 title="HTML Exercise 5">London</h1>
-<!-- HTML Exercise 6 -->
-<hr>
-<p>London is the capital city of England. It is the most populous city in the United Kingdom, with a metropolitan area of over 13 million inhabitants.</p>
-
-<!-- HTML Exercise 8 -->
-<h1>Universal Studios Presents</h1>
-<h2>Jurassic Park</h2>
-<h3>About</h3>
-<p>On the Island of Isla Nublar, a new park has been built: Jurassic Park is a theme park of cloned dinosaurs!!</p>
-
-<!-- HTML Exercise 9 -->
-<p>Hello World!</p>
-
-<!-- HTML Exercise 11 -->
-<p>My Bonnie lies<br>over the ocean.</p>
-
-<!-- HTML Exercise 12 -->
-<!-- Had to pay homage to Red vs Blue by Rooster Teeth -->
+<!-- HTML Exercise 12
+	Had to pay homage to Red vs Blue by Rooster Teeth -->
 <pre>
   <span id="rosesred">Roses are red</span>
 
   <span id="violetsblue">And violets are blue.</span>
 
-  <span id="strolling">One day we'll cruise down
+  <span id="strolling">One day we'll cruise down</span>
 
-  Blood Gulch Avenue.</span>
+  Blood Gulch Avenue.
 </pre>
 
 <!-- HTML Exercise 40 -->
