--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	}
 	#strolling {
 		animation: stroll 4s ease-in-out infinite;
-		display: block;
+		display: inline;
 	}
 	@keyframes stroll {
 		from {left: 0px}
