--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		to {background-color: blue;}
 	}
 	#strolling {
-		animation: stroll 4s ease-in-out infinite;
+		animation: stroll 4s infinite;
 		display: inline;
 	}
 	@keyframes stroll {
