--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
 		to {background-color: blue;}
 	}
 	#strolling {
-		animation: stroll 4s infinite;
+		animation: stroll 4s ease-in-out infinite;
 		display: inline;
 	}
 	@keyframes stroll {
-		from {left: 0px}
+		from {left: 0px;}
 		to {left: 300px;}
 	}
 </style>
