--- a/index.html
+++ b/index.html
@@ -36,16 +36,11 @@
 <h1>This is what I am learning about HTML, CSS, and other languages</h1>
 
 <!-- HTML Exercise 12
-	Had to pay homage to Red vs Blue by Rooster Teeth -->
-<pre>
-  <span id="rosesred">Roses are red</span>
-
-  <span id="violetsblue">And violets are blue.</span>
-
-  <div id="div1">One day we'll cruise down
-
-  Blood Gulch Avenue.</div>
-</pre>
+Had to pay homage to Red vs Blue by Rooster Teeth -->
+<span id="rosesred">Roses are red</span>
+<span id="violetsblue">And violets are blue.</span>
+<div id="div1">One day we'll cruise down<br>
+Blood Gulch Avenue.</div>
 
 <!-- HTML Exercise 40 -->
 <a href="index.html" title="Home">Back to Home</a>
