--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 		to {background-color: blue;}
 	}
 	div {
+		position: relative;
 		animation: stroll 4s infinite;
 	}
 	@keyframes stroll {
@@ -37,7 +38,7 @@
 
 <!-- HTML Exercise 12
 Had to pay homage to Red vs Blue by Rooster Teeth -->
-<span id="rosesred">Roses are red</span>
+<span id="rosesred">Roses are red<br></span>
 <span id="violetsblue">And violets are blue.</span>
 <div id="div1">One day we'll cruise down<br>
 Blood Gulch Avenue.</div>
