--- a/index.html
+++ b/index.html
@@ -38,10 +38,12 @@
 
 <!-- HTML Exercise 12
 Had to pay homage to Red vs Blue by Rooster Teeth -->
-<span id="rosesred">Roses are red<br></span>
-<span id="violetsblue">And violets are blue.</span>
-<div id="div1">One day we'll cruise down<br>
-Blood Gulch Avenue.</div>
+<pre>
+	<span id="rosesred">Roses are red</span>
+	<span id="violetsblue">And violets are blue.</span>
+	<div id="div1">One day we'll cruise down
+	Blood Gulch Avenue.</div>
+</pre>
 
 <!-- HTML Exercise 40 -->
 <a href="index.html" title="Home">Back to Home</a>
