--- a/index.html
+++ b/index.html
@@ -41,8 +41,7 @@ Had to pay homage to Red vs Blue by Rooster Teeth -->
 <pre>
 	<span id="rosesred">Roses are red</span>
 	<span id="violetsblue">And violets are blue.</span>
-	<div id="div1">One day we'll cruise down
-	Blood Gulch Avenue.</div>
+	<div id="div1">One day we'll cruise down<br>Blood Gulch Avenue.</div>
 </pre>
 
 <!-- HTML Exercise 40 -->
