--- a/index.html
+++ b/index.html
@@ -19,16 +19,14 @@
 		from {background-color: #7f00ff;}
 		to {background-color: blue;}
 	}
-	div {
+	#strolling {
 		position: relative;
 		animation: stroll 4s infinite;
+		animation-timing-function: ease-in-out;
 	}
 	@keyframes stroll {
 		from {left: 0px;}
 		to {left: 300px;}
-	}
-	#div1 {
-		animation-timing-function: ease-in-out;
 	}
 </style>
 </head>
@@ -41,7 +39,7 @@ Had to pay homage to Red vs Blue by Rooster Teeth -->
 <pre>
 	<span id="rosesred">Roses are red</span>
 	<span id="violetsblue">And violets are blue.</span>
-	<div id="div1">One day we'll cruise down<br>Blood Gulch Avenue.</div>
+	<span id="div1">One day we'll cruise down<br>Blood Gulch Avenue.</span>
 </pre>
 
 <!-- HTML Exercise 40 -->
