--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ Had to pay homage to Red vs Blue by Rooster Teeth -->
 <pre>
 	<span id="rosesred">Roses are red</span>
 	<span id="violetsblue">And violets are blue.</span>
-	<span id="div1">One day we'll cruise down<br>Blood Gulch Avenue.</span>
+	<span id="strolling">One day we'll cruise down<br>Blood Gulch Avenue.</span>
 </pre>
 
 <!-- HTML Exercise 40 -->
