--- a/index.html
+++ b/index.html
@@ -2,33 +2,7 @@
 <html>
 <head>
 <title>INST377 Learning Assignment</title>
-<style>
-	#rosesred {
-		animation: roses 4s linear infinite alternate;
-		display: inline;
-	}
-	@keyframes roses {
-		from {background-color: #ff007f;}
-		to {background-color: red;}
-	}
-	#violetsblue {
-		animation: violets 4s linear infinite alternate;
-		display: inline;
-	}
-	@keyframes violets {
-		from {background-color: #7f00ff;}
-		to {background-color: blue;}
-	}
-	#strolling {
-		position: relative;
-		animation: stroll 4s infinite;
-		animation-timing-function: ease-in-out;
-	}
-	@keyframes stroll {
-		from {left: 0px;}
-		to {left: 300px;}
-	}
-</style>
+<link rel="stylesheet" type="text/css" href="mystyle.css">
 </head>
 <body>
 
