CSS Stylesheet update 1
Changed from "mystyle.css" to "styles.css"

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>INST377 Learning Assignment</title>
-<link rel="stylesheet" type="text/css" href="mystyle.css">
+	<link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
 
