--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>INST377 Learning Assignment</title>
+<title>Assignment 1: HTML & CSS</title>
 	<link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
 
-<h1>This is what I am learning about HTML, CSS, and other languages</h1>
+<!-- Q1-1 -->
+<div id="topheader">
+	<h1>Harrison Kang Jr</h1>
+</div>
 
 <!-- HTML Exercise 12
 Had to pay homage to Red vs Blue by Rooster Teeth -->
