--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 	<h1>Harrison Kang Jr</h1>
 </div>
 
+<!-- Q1-2 -->
+<div id="q2">
+	<p>Bla bla</p>
+</div>
 <!-- HTML Exercise 12
 Had to pay homage to Red vs Blue by Rooster Teeth -->
 <pre>
