--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 
 <!-- Q1-2 -->
 <div id="q2">
-	<p>Bla bla</p>
+	<div id="q4">Ha</div>
+	<div id="q5">Ha</div>
 </div>
 <!-- HTML Exercise 12
 Had to pay homage to Red vs Blue by Rooster Teeth -->
