A1 Q1-5 added list of responsibilities

--- a/index.html
+++ b/index.html
@@ -27,7 +27,12 @@
 				<td>C</td>
 			</tr>
 			<tr>
-				<td>A</td>
+				<td>
+					<ul>
+						<li>Take and make customers' orders</li>
+						<li>Restock boxes, napkins, drinks, etc.</li>
+					</ul>
+				</td>
 				<td>B</td>
 				<td>C</td>
 			</tr>
