--- a/index.html
+++ b/index.html
@@ -22,7 +22,13 @@
 				<th>C</th>
 			</tr>
 			<tr>
-				<td>Cashier</td>
+				<td>Cashier<br>
+					<ul>
+						<li>Take and make customers' orders</li>
+						<li>Restock boxes, napkins, drinks, etc.</li>
+						<li>Prioritize and multi-task under pressure</li>
+					</ul>
+				</td>
 				<td>B</td>
 				<td>C</td>
 			</tr>
