--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 				<th>C</th>
 			</tr>
 			<tr>
-				<td>Cashier<br>
+				<td>Cashier
 					<ul>
 						<li>Take and make customers' orders</li>
 						<li>Restock boxes, napkins, drinks, etc.</li>
