--- a/index.html
+++ b/index.html
@@ -22,18 +22,27 @@
 				<th>C</th>
 			</tr>
 			<tr>
-				<td>Cashier
+				<td>Cashier</td>
+				<td>B</td>
+				<td>C</td>
+			</tr>
+			<tr>
+				<td>
 					<ul>
 						<li>Take and make customers' orders</li>
 						<li>Restock boxes, napkins, drinks, etc.</li>
 						<li>Prioritize and multi-task under pressure</li>
 					</ul>
 				</td>
-				<td>B
-					<ul></ul>
+				<td>
+					<ul>
+						<li></li>
+					</ul>
 				</td>
-				<td>C
-					<ul></ul>
+				<td>
+					<ul>
+						<li></li>
+					</ul>
 				</td>
 			</tr>
 		</table>
