--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
 <!-- HTML Exercise 12
 Had to pay homage to Red vs Blue by Rooster Teeth -->
 <pre>
-	<span id="rosesred">Roses are red</span>
+	<em><span id="rosesred">Roses are red</span>
 	<span id="violetsblue">And violets are blue.</span>
 	<span id="strolling">One day we'll cruise down
-	Blood Gulch Avenue.</span>
+	Blood Gulch Avenue.</span></em>
 </pre>
 
 <!-- HTML Exercise 40 -->
