A1 Q1-5 and CSS animation edits

--- a/index.html
+++ b/index.html
@@ -18,48 +18,44 @@
 		<table>
 			<tr>
 				<th>Popeyes Kitchen</th>
-				<th>B</th>
-				<th>C</th>
+				<th>Fordsleigh Inc.</th>
+				<th>Ymir Sites</th>
 			</tr>
 			<tr>
 				<td>Cashier</td>
-				<td>B</td>
-				<td>C</td>
+				<td>Receptionist</td>
+				<td>Junior Web Developer</td>
 			</tr>
 			<tr>
 				<td>
-					
-						<li>Take and make customers' orders</li>
-						<li>Restock boxes, napkins, drinks, etc.</li>
-						<li>Prioritize and multi-task under pressure</li>
-					
+					<li>Take and make orders</li>
+					<li>Restock various things</li>
+					<li>Prioritize and multi-task under pressure</li>
 				</td>
 				<td>
-					<ul>
-						<li></li>
-					</ul>
+					<li>Answered phone calls</li>
+					<li>Made appointments</li>
+					<li>Contacted customers</li>
 				</td>
 				<td>
-					<ul>
-						<li></li>
-					</ul>
+					<li>Shadowed senior web developers</li>
+					<li>Work in a team to develop websites for clients.</li>
 				</td>
 			</tr>
 		</table>
 	</div>
 </div><br>
+
 <!-- HTML Exercise 12
 Had to pay homage to Red vs Blue by Rooster Teeth -->
 <pre>
-	<em><span id="rosesred">Roses are red</span>
-	<span id="violetsblue">And violets are blue.</span>
-	<span id="strolling">One day we'll cruise down
-	Blood Gulch Avenue.</span></em>
+	<em>
+		<span id="rosesred">Roses are red</span>
+		<span id="violetsblue">And violets are blue.</span>
+		<span id="strolling">One day we'll cruise down
+		Blood Gulch Avenue.</span>
+	</em>
 </pre>
-
-<!-- HTML Exercise 40 -->
-<a href="index.html" title="Home">Back to Home</a>
-
 
 </body>
 </html>
