--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@ Had to pay homage to Red vs Blue by Rooster Teeth -->
 	<em>
 		<span id="rosesred">Roses are red</span>
 		<span id="violetsblue">And violets are blue.</span>
-		<span id="strolling">One day we'll cruise down
-		Blood Gulch Avenue.</span>
+		<span class="strolling">One day we'll cruise down</span>
+		<span class="strolling">Blood Gulch Avenue.</span>
 	</em>
 </pre>
 
