--- a/Lab 3/lab_3_bad_css.html
+++ b/Lab 3/lab_3_bad_css.html
@@ -93,7 +93,7 @@
 <body>
   <div class="doc wrapper">
     <div class="head textbox" id="start">
-      <h1 class="newsline">make me a headline</h1>
+      <h1 class="newsline">Sample Header</h1>
       <a href="#">anchor tag to nowhere</a>
     </div>
     <div class="second_container">
@@ -103,14 +103,13 @@
     </div>
     <div class="container">
       <div class="green textbox">
-        First
+        click me I'm great
       </div>
       <div class="green textbox">
-        Second
       </div>
       <div class="second textbox">
         <p>
-          Third
+          World #2
         </p>
       </div>
     </div>
