Removed doc CSS rule

--- a/Lab 3/lab_3_bad_css.html
+++ b/Lab 3/lab_3_bad_css.html
@@ -4,12 +4,6 @@
 <head>
   <title>Sample HTML Demonstration Page</title>
   <style>
-    .doc {
-      background: green;
-      height: 960px;
-      width: 480px;
-    }
-
     div {
       width: 100px;
       height: 42px;
@@ -91,7 +85,7 @@
 </head>
 
 <body>
-  <div class="doc wrapper">
+  <div class="wrapper">
     <div class="head textbox" id="start">
       <h1 class="newsline">Sample Header</h1>
       <a href="#">anchor tag to nowhere</a>
