--- a/Lab 3/lab_3_bad_css.html
+++ b/Lab 3/lab_3_bad_css.html
@@ -4,21 +4,14 @@
 <head>
   <title>Sample HTML Demonstration Page</title>
   <style>
-    div {
-      width: 100px;
-      height: 42px;
-      margin: auto;
-    }
-
-    .newsline {
-      font-size: 42px;
-      font-weight: 400;
+    body {
+      margin: 0;
     }
 
     .wrapper {
       width: 60%;
       height: 100vh;
-      margin: auto;
+      margin: 0 auto;
       background: grey;
     }
 
@@ -31,17 +24,16 @@
 
     .head a,
     .head {
-      margin: auto;
+      margin: 0 auto;
       padding: 0;
     }
 
     .second_container {
       background: pink;
       height: 150px;
-      width: 100%;
       display: flex;
-      align-content: center;
-      margin-bottom: 10px;
+      justify-content: center;
+      align-items: center;
     }
 
     .container {
@@ -49,7 +41,6 @@
       justify-content: space-around;
       align-items: center;
       flex-wrap: wrap;
-      width: 100%;
     }
 
     .textbox {
@@ -75,19 +66,13 @@
       justify-content: center;
       align-items: center;
     }
-
-    .interior {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
   </style>
 </head>
 
 <body>
   <div class="wrapper">
-    <div class="head textbox" id="start">
-      <h1 class="newsline">Sample Header</h1>
+    <div class="head" id="start">
+      <h1>Sample Header</h1>
       <a href="#">anchor tag to nowhere</a>
     </div>
     <div class="second_container">
@@ -97,7 +82,6 @@
     </div>
     <div class="container">
       <div class="green textbox">
-        click me I'm great
       </div>
       <div class="green textbox">
       </div>
@@ -108,6 +92,19 @@
       </div>
     </div>
   </div>
+  <script>
+    let element = document.getElementsByClassName("green")[0];
+    const string = "click me I'm great";
+    element.innerHTML = string;
+
+    element.addEventListener("click", (e) => {
+      if (element.innerHTML !== string) {
+        element.innerHTML = string;
+      } else {
+        element.innerHTML = "";
+      }
+    })
+  </script>
 </body>
 
 </html>
